@@ -19,6 +19,9 @@ Core and builtins
 Library
 -------
 
+- Bug #1513223: .close() of a _socketobj now releases the underlying
+  socket again, which then gets closed as it becomes unreferenced.
+
 - The '_ctypes' extension module now works when Python is configured
   with the --without-threads option.
 
